--- a/release.json
+++ b/release.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://github.com/xtwist/proxyrequest-releases/releases/download/v1.0.1-mac/proxyrequest-1.0.1-arm64.zip",
+  "url": "https://github.com/xtwist/proxyrequest-releases/releases/download/v1.0.1-mac/proxyrequest-1.0.1-arm64.pkg.zip",
   "name": "",
   "notes": "",
   "pub_date": "2022-06-22T15:14:00.000Z"
